# Foobar

./: readme.md
bar/: CMakeLists.txt  bar.cpp
foo/: CMakeLists.txt  foo-1.0.pc.in  foo-config.cmake.in  foo-static-1.0.pc.in  foo.cpp  foo.h
